fixed the gaping issue in Display component

--- a/src/components/display/display.css
+++ b/src/components/display/display.css
@@ -8,6 +8,15 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  gap: 1rem;
+
+  @media screen and (width >= 30em) {
+    gap: 2rem;
+  }
+
+  @media screen and (width >= 48em) {
+    gap: 0;
+  }
 
   .row-group {
     display: grid;
